<resources>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="app_name">login</string>
    <string name="sweet_voice">Sweet Voice</string>
    <string name="welcome">Welcome back, friend!</string>
    <string name="remember">Remember me</string>
    <string name="forgot">Forgot password?</string>
    <string name="sign"><u>Sign Up</u></string>
    <string name="sign2">Sign Up</string>
    <string name="don_t">Don_t have any account?</string>
    <string name="username_">Username</string>
    <string name="confirm">Confirm password</string>
    <string name="yes">Yes, I am 18</string>
    <string name="create">Create</string>
    <string name="sorry">Sorry, we did not find anyone</string>
    <string name="try_"><u>Try again </u></string>
    <string name="yesq">Yes</string>
    <string name="noq">No</string>
    <string name="doorreg">Вы перешли в окно регестрации</string>
    <string name="doorquestion">Вы перешли в окно вопросов</string>
    <string name="doorload">Вы перешли на экран загрузки</string>
    <string name="load">Loading please wait</string>
    <string name="tryagain">Something went wrong. Login or password is invalid. Please try again...</string>
    <string name="paswwod">Введите пароль</string>
    <string name="pasneverno">Не верный пароль</string>
    <string name="emailwwod">Введите e-mail</string>
    <string name="emailneverno">Не действительный e-mail</string>
    <string name="namewwod">Введите имя пользователя</string>
    <string name="nameneverno">Не верное имя пользователя</string>
    <string name="pasnesovp">Пароли не совпадают</string>
    <string name="link_string">https://google.com</string>
    <string name="no">Нажата кнопка {no}!</string>
    <string name="back">Вы вернулись в окно входа</string>
    <string name="nachnem">Start the survey?</string>
</resources>
