<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_"
        android:fontFamily="@font/shrift_max"
        android:onClick="Najmi"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="25sp"></Button>

    <TextView
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy">
    </TextView>

</LinearLayout>