<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/text"
        android:text="@string/nachnem"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yess"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_"
            android:fontFamily="@font/shrift_max"
            android:text="@string/yesq"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/noo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:background="@drawable/button_"
            android:fontFamily="@font/shrift_max"
            android:text="@string/noq"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>