<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/text"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="35sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rectangle_left"
        android:layout_gravity="center"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="295dp"
            android:layout_height="45dp"
            android:background="@null"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_"
        android:layout_gravity="center"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="-4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="295dp"
            android:layout_height="45dp"
            android:background="@null"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:layout_marginTop="-4dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_right">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <CheckBox
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp">
        </CheckBox>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:layout_gravity="center"
        android:textSize="16sp">
    </TextView>

</LinearLayout>

        <Button
            android:id="@+id/button_"
            android:layout_width="265dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_"
            android:fontFamily="@font/shrift_max"
            android:onClick="Najmi"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="25sp"></Button>

        <TextView
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_width="150dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/forgot">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/forgot">
        </TextView>



    </LinearLayout>





</LinearLayout>
